--- a/post.html
+++ b/post.html
@@ -1,36 +1,104 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>Blog Post</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loading Post...</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 50px auto; padding: 0 20px; color: #333; }
-        #content img { max-width: 100%; }
-        .back-link { display: block; margin-bottom: 20px; text-decoration: none; color: #007bff; }
+        /* 閱讀頁面的樣式設計 */
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.8;
+            color: #333;
+            max-width: 750px;
+            margin: 0 auto;
+            padding: 40px 20px;
+            background-color: #fff;
+        }
+        .back-btn {
+            display: inline-block;
+            margin-bottom: 30px;
+            text-decoration: none;
+            color: #666;
+            font-size: 0.9rem;
+            transition: color 0.2s;
+        }
+        .back-btn:hover { color: #007bff; }
+        
+        /* 文章內容樣式 */
+        #post-content img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            display: block;
+            margin: 20px auto;
+        }
+        h1 { font-size: 2.2rem; margin-bottom: 10px; color: #111; }
+        hr { border: 0; border-top: 1px solid #eee; margin: 30px 0; }
+        pre {
+            background: #f4f4f4;
+            padding: 15px;
+            border-radius: 5px;
+            overflow-x: auto;
+            font-family: Consolas, Monaco, 'Andale Mono', monospace;
+        }
+        blockquote {
+            border-left: 4px solid #ddd;
+            padding-left: 20px;
+            color: #666;
+            font-style: italic;
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
-    <a href="index.html" class="back-link">← 回首頁</a>
-    <div id="content">載入中...</div>
+
+    <a href="index.html" class="back-btn">← 返回文章列表</a>
+    
+    <article id="post-content">
+        <p style="color: #999;">正在載入文章內容...</p>
+    </article>
 
     <script>
         async function renderPost() {
+            // A. 從網址取得文章的 slug (例如 ?slug=my-first-post)
             const params = new URLSearchParams(window.location.search);
             const slug = params.get('slug');
-            if (!slug) return;
+
+            if (!slug) {
+                document.getElementById('post-content').innerHTML = "<h1>找不到文章</h1><p>請返回首頁重新選擇。</p>";
+                return;
+            }
 
             try {
+                // B. 去 posts 資料夾抓取對應的 .md 檔案
                 const response = await fetch(`./posts/${slug}.md`);
-                const text = await response.json(); // 修正：如果你的 sync.js 直接存文字，用 response.text()
-                // 讀取 Markdown 並去掉 Front-matter (標題日期設定)
-                const md = await response.text();
-                const cleanMd = md.replace(/---[\s\S]*?---/, '');
-                document.getElementById('content').innerHTML = marked.parse(cleanMd);
-            } catch (e) {
-                document.getElementById('content').innerHTML = "文章載入失敗。";
+                if (!response.ok) throw new Error('檔案讀取失敗');
+
+                const mdText = await response.text();
+
+                // C. 處理 Front-matter (去掉檔案開頭的 --- 標題日期資訊)
+                // 因為我們已經在 index.html 顯示過標題了，這裡只保留內文
+                const cleanMd = mdText.replace(/^---[\s\S]*?---/, '');
+
+                // D. 解析 Markdown 並放入頁面
+                const htmlContent = marked.parse(cleanMd);
+                document.getElementById('post-content').innerHTML = htmlContent;
+
+                // E. 自動將文章的第一個標題設為網頁標籤標題
+                const firstHeading = document.querySelector('h1');
+                if (firstHeading) {
+                    document.title = firstHeading.innerText + " | Kirsten's Blog";
+                }
+
+            } catch (error) {
+                console.error(error);
+                document.getElementById('post-content').innerHTML = "<h1>抱歉！</h1><p>載入文章時發生錯誤，請確認文章是否存在。</p>";
             }
         }
+
+        // 啟動渲染
         renderPost();
     </script>
 </body>
