--- a/index.html
+++ b/index.html
@@ -2,118 +2,53 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Design with Kirsten</title>
     <style>
-        /* 1. 全域樣式 */
-        body { 
-            font-family: -apple-system, system-ui, sans-serif; 
-            background: #fff; 
-            margin: 0; 
-            display: flex; 
-            align-items: center; 
-            justify-content: center; 
-            min-height: 100vh; 
-            text-align: center; 
-            color: #333; 
-        }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+        body { font-family: -apple-system, system-ui, sans-serif; background: #fff; margin: 0; display: flex; align-items: center; justify-content: center; min-height: 100vh; text-align: center; color: #333; }
         
-        /* 2. 統一的導覽列 */
-        nav { 
-            position: fixed; 
-            top: 20px; 
-            left: 50%; 
-            transform: translateX(-50%); 
-            background: rgba(255,255,255,0.85); 
-            backdrop-filter: blur(10px); 
-            padding: 12px 30px; 
-            border-radius: 50px; 
-            box-shadow: 0 4px 20px rgba(0,0,0,0.05); 
-            z-index: 1000; 
-            border: 1px solid rgba(238, 238, 238, 0.5); 
-            display: flex; 
-            white-space: nowrap; 
-        }
-        nav a { margin: 0 15px; text-decoration: none; color: #666; font-weight: 500; font-size: 14px; transition: color 0.2s; }
+        /* 統一導覽列 */
+        nav { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background: rgba(255,255,255,0.85); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); padding: 12px 25px; border-radius: 50px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); z-index: 9999; border: 1px solid rgba(238, 238, 238, 0.8); display: flex; align-items: center; justify-content: center; white-space: nowrap; }
+        nav a { margin: 0 12px; text-decoration: none; color: #666; font-weight: 600; font-size: 14px; transition: color 0.2s; letter-spacing: 0.5px; }
         nav a:hover { color: #007bff; }
 
-        /* 3. Profile Section */
-        .container { max-width: 400px; width: 85%; padding: 40px 0; }
+        .container { max-width: 400px; width: 85%; }
         
-        /* Profile Icon Hover Effect */
-        .profile-pic { 
-            width: 120px; 
-            height: 120px; 
-            border-radius: 50%; 
-            object-fit: cover; 
-            margin-bottom: 15px; 
-            box-shadow: 0 8px 25px rgba(0,0,0,0.1); 
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
-            cursor: pointer;
-            border: 3px solid transparent;
-        }
-        .profile-pic:hover { 
-            transform: scale(1.1) rotate(5deg); 
-            box-shadow: 0 15px 35px rgba(0,123,255,0.2);
-            border: 3px solid #007bff;
-        }
+        /* Profile 特效 */
+        .profile-pic { width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin-bottom: 15px; box-shadow: 0 8px 25px rgba(0,0,0,0.1); transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); cursor: pointer; border: 3px solid transparent; }
+        .profile-pic:hover { transform: scale(1.1) rotate(5deg); box-shadow: 0 15px 35px rgba(0,123,255,0.2); border-color: #007bff; }
 
         h1 { font-size: 1.8rem; margin: 10px 0 5px; font-weight: 700; }
-        .description { color: #888; margin-bottom: 35px; font-size: 1rem; line-height: 1.4; }
+        .description { color: #888; margin-bottom: 35px; font-size: 1rem; }
 
-        /* 4. Buttons 垂直排列 */
-        .button-stack { 
-            display: flex; 
-            flex-direction: column; 
-            gap: 15px; 
-        }
-        .btn { 
-            padding: 18px; 
-            border: 1px solid #f0f0f0; 
-            border-radius: 16px; 
-            text-decoration: none; 
-            color: #444; 
-            font-weight: 600; 
-            font-size: 1rem; 
-            transition: all 0.3s ease; 
-            background: #fff; 
-        }
-        .btn:hover { 
-            background: #f8f9fa; 
-            transform: translateY(-3px); 
-            box-shadow: 0 8px 20px rgba(0,0,0,0.05); 
-            border-color: #007bff; 
-            color: #007bff; 
-        }
+        .button-stack { display: flex; flex-direction: column; gap: 15px; }
+        .btn { padding: 18px; border: 1px solid #f0f0f0; border-radius: 16px; text-decoration: none; color: #444; font-weight: 600; font-size: 1rem; transition: 0.3s; background: #fff; }
+        .btn:hover { background: #f8f9fa; transform: translateY(-3px); border-color: #007bff; color: #007bff; box-shadow: 0 8px 20px rgba(0,0,0,0.05); }
 
-        /* 手機版導覽列微調 */
         @media (max-width: 600px) {
-            nav { width: 80%; justify-content: space-around; padding: 10px 20px; }
-            nav a { margin: 0 5px; font-size: 13px; }
+            nav { width: 88%; padding: 10px 5px; top: 15px; }
+            nav a { margin: 0 8px; font-size: 13px; }
         }
     </style>
 </head>
 <body>
-
-<nav>
-    <a href="index.html">Home</a>
-    <a href="blog.html">Blog</a>
-    <a href="resources.html">Resources</a>
-    <a href="#">About</a>
-</nav>
-
-<div class="container">
-    <img src="profile.png" alt="Kirsten" class="profile-pic">
-    <h1>Design with Kirsten</h1>
-    <p class="description">UXUI Design | AI Tips | Resources</p>
-
-    <div class="button-stack">
-        <a href="https://www.instagram.com/kirsten_uxui/" target="_blank" class="btn">Instagram</a>
-        <a href="https://www.threads.net/@kirsten_uxui" target="_blank" class="btn">Threads</a>
-        <a href="blog.html" class="btn">Blog Posts</a>
-        <a href="resources.html" class="btn">Design Resources</a>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="blog.html">Blog</a>
+        <a href="resources.html">Resources</a>
+        <a href="#">About</a>
+    </nav>
+    <div class="container">
+        <img src="profile.png" alt="Kirsten" class="profile-pic">
+        <h1>Design with Kirsten</h1>
+        <p class="description">UXUI Design | AI Tips | Resources</p>
+        <div class="button-stack">
+            <a href="https://www.instagram.com/kirsten_uxui/" target="_blank" class="btn">Instagram</a>
+            <a href="https://www.threads.net/@kirsten_uxui" target="_blank" class="btn">Threads</a>
+            <a href="blog.html" class="btn">Blog Posts</a>
+            <a href="resources.html" class="btn">Design Resources</a>
+        </div>
     </div>
-</div>
-
 </body>
 </html>
