--- a/index.html
+++ b/index.html
@@ -8,12 +8,44 @@
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
         body { font-family: -apple-system, system-ui, sans-serif; background: #fff; margin: 0; display: flex; align-items: center; justify-content: center; min-height: 100vh; text-align: center; color: #333; }
         
-        /* 統一導覽列 */
-        nav { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background: rgba(255,255,255,0.85); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); padding: 12px 25px; border-radius: 50px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); z-index: 9999; border: 1px solid rgba(238, 238, 238, 0.8); display: flex; align-items: center; justify-content: center; white-space: nowrap; }
-        nav a { margin: 0 12px; text-decoration: none; color: #666; font-weight: 600; font-size: 14px; transition: color 0.2s; letter-spacing: 0.5px; }
-        nav a:hover { color: #007bff; }
+     /* --- 頂部鎖定導覽列：100% 統一解決方案 --- */
+nav { 
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    width: 100%; /* 強制填滿寬度，消除位移 */
+    background: rgba(255,255,255,0.9); 
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px);
+    height: 70px; /* 固定高度 */
+    display: flex; 
+    align-items: center; 
+    justify-content: center; /* 文字居中 */
+    border-bottom: 1px solid #f0f0f0; 
+    z-index: 9999;
+}
 
-        .container { max-width: 400px; width: 85%; }
+nav a { 
+    margin: 0 18px; 
+    text-decoration: none; 
+    color: #666; 
+    font-weight: 500; 
+    font-size: 15px; 
+    transition: 0.2s;
+}
+
+nav a:hover { color: #007bff; }
+
+/* 手機版：稍微縮小字體與間距 */
+@media (max-width: 600px) {
+    nav { height: 60px; }
+    nav a { margin: 0 10px; font-size: 14px; }
+}
+
+/* ⚠️ 重要：除了 index.html，其他頁面的 body 都要調整 padding-top */
+body { 
+    padding-top: 70px; /* 確保內容不被導覽列遮住 */
+}
         
         /* Profile 特效 */
         .profile-pic { width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin-bottom: 15px; box-shadow: 0 8px 25px rgba(0,0,0,0.1); transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); cursor: pointer; border: 3px solid transparent; }
