--- a/blog.html
+++ b/blog.html
@@ -6,23 +6,25 @@
     <title>Blog - Design with Kirsten</title>
     <style>
         * { box-sizing: border-box; }
-        body { font-family: -apple-system, system-ui, sans-serif; background: #fff; margin: 0; padding-top: 100px; color: #333; }
+        body { font-family: -apple-system, system-ui, sans-serif; background: #fafafa; margin: 0; padding-top: 100px; color: #333; }
         
-        nav { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background: rgba(255,255,255,0.85); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); padding: 12px 25px; border-radius: 50px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); z-index: 9999; border: 1px solid rgba(238, 238, 238, 0.8); display: flex; align-items: center; justify-content: center; white-space: nowrap; }
-        nav a { margin: 0 12px; text-decoration: none; color: #666; font-weight: 600; font-size: 14px; transition: color 0.2s; }
+        nav { position: fixed; top: 0; left: 0; width: 100%; height: 70px; background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); display: flex; align-items: center; justify-content: center; border-bottom: 1px solid #eee; z-index: 9999; }
+        nav a { margin: 0 18px; text-decoration: none; color: #666; font-weight: 600; font-size: 15px; transition: 0.2s; }
         nav a:hover { color: #007bff; }
 
-        .main-content { max-width: 650px; margin: 0 auto; padding: 20px 25px 80px; }
-        h1 { font-size: 2.2rem; margin-bottom: 30px; }
-        .post-item { padding: 25px 0; border-bottom: 1px solid #f0f0f0; display: block; text-decoration: none; transition: 0.3s; }
-        .post-item:hover { transform: translateX(8px); }
-        .post-date { font-size: 12px; color: #bbb; letter-spacing: 1px; text-transform: uppercase; }
-        .post-title { font-size: 1.4rem; font-weight: 700; margin-top: 8px; color: #222; }
-        .post-item:hover .post-title { color: #007bff; }
+        .main-content { max-width: 700px; margin: 0 auto; padding: 0 25px 80px; }
+        h1 { font-size: 2rem; margin-bottom: 40px; text-align: center; }
+
+        /* Blog 卡片樣式 */
+        .post-item { background: #fff; padding: 25px; border-radius: 20px; border: 1px solid #eee; margin-bottom: 20px; display: block; text-decoration: none; transition: 0.3s; box-shadow: 0 4px 12px rgba(0,0,0,0.03); }
+        .post-item:hover { transform: translateY(-5px); border-color: #007bff; box-shadow: 0 12px 25px rgba(0,0,0,0.08); }
+        .post-date { font-size: 12px; color: #bbb; letter-spacing: 1px; text-transform: uppercase; margin-bottom: 8px; }
+        .post-title { font-size: 1.3rem; font-weight: 700; color: #222; line-height: 1.4; }
 
         @media (max-width: 600px) {
-            nav { width: 88%; padding: 10px 5px; top: 15px; }
-            nav a { margin: 0 8px; font-size: 13px; }
+            nav { height: 60px; }
+            nav a { margin: 0 12px; font-size: 14px; }
+            body { padding-top: 80px; }
         }
     </style>
 </head>
@@ -35,7 +37,7 @@
     </nav>
     <div class="main-content">
         <h1>Latest Stories</h1>
-        <div id="blog-list">載入中...</div>
+        <div id="blog-list"></div>
     </div>
     <script>
         async function loadPosts() {
