--- a/resources.html
+++ b/resources.html
@@ -6,23 +6,28 @@
     <title>Resources - Design with Kirsten</title>
     <style>
         * { box-sizing: border-box; }
-        body { font-family: -apple-system, system-ui, sans-serif; background: #fff; margin: 0; padding-top: 100px; color: #333; min-height: 100vh; }
+        body { font-family: -apple-system, system-ui, sans-serif; background: #fafafa; margin: 0; padding-top: 100px; color: #333; min-height: 100vh; }
         
-        nav { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background: rgba(255,255,255,0.85); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); padding: 12px 25px; border-radius: 50px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); z-index: 9999; border: 1px solid rgba(238, 238, 238, 0.8); display: flex; align-items: center; justify-content: center; white-space: nowrap; }
-        nav a { margin: 0 12px; text-decoration: none; color: #666; font-weight: 600; font-size: 14px; transition: color 0.2s; }
+        nav { position: fixed; top: 0; left: 0; width: 100%; height: 70px; background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); display: flex; align-items: center; justify-content: center; border-bottom: 1px solid #eee; z-index: 9999; }
+        nav a { margin: 0 18px; text-decoration: none; color: #666; font-weight: 600; font-size: 15px; transition: 0.2s; }
         nav a:hover { color: #007bff; }
 
-        .header { text-align: center; padding: 40px 20px; }
+        .header { text-align: center; padding: 20px 20px 40px; }
+        h1 { font-size: 2rem; margin-bottom: 10px; }
+
         .resources-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; max-width: 1100px; margin: 0 auto; padding: 0 25px 100px; }
-        .card { background: #fff; border: 1px solid #f0f0f0; border-radius: 16px; padding: 25px; text-decoration: none; color: inherit; transition: 0.3s; display: flex; flex-direction: column; }
-        .card:hover { transform: translateY(-5px); border-color: #007bff; box-shadow: 0 10px 25px rgba(0,0,0,0.05); }
-        .card-tag { font-size: 0.7rem; font-weight: bold; color: #007bff; text-transform: uppercase; margin-bottom: 10px; }
-        .card h3 { margin: 0 0 10px 0; font-size: 1.2rem; }
+        
+        /* 資源卡片樣式 */
+        .card { background: #fff; border: 1px solid #eee; border-radius: 20px; padding: 25px; text-decoration: none; color: inherit; transition: 0.3s; display: flex; flex-direction: column; box-shadow: 0 4px 12px rgba(0,0,0,0.03); }
+        .card:hover { transform: translateY(-5px); border-color: #007bff; box-shadow: 0 12px 25px rgba(0,0,0,0.08); }
+        .card-tag { font-size: 0.7rem; font-weight: bold; color: #007bff; text-transform: uppercase; margin-bottom: 12px; letter-spacing: 0.5px; }
+        .card h3 { margin: 0 0 10px 0; font-size: 1.2rem; font-weight: 700; }
         .card p { margin: 0; font-size: 0.9rem; color: #666; line-height: 1.6; }
 
         @media (max-width: 600px) {
-            nav { width: 88%; padding: 10px 5px; top: 15px; }
-            nav a { margin: 0 8px; font-size: 13px; }
+            nav { height: 60px; }
+            nav a { margin: 0 12px; font-size: 14px; }
+            body { padding-top: 80px; }
             .resources-grid { grid-template-columns: 1fr; }
         }
     </style>
