--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="index.html">Home</a>
         <a href="blog.html">Blog</a>
         <a href="resources.html">Resources</a>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
     </nav>
     <div class="container">
         <img src="profile.png" alt="Kirsten" class="profile-pic">
