--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
         <a href="index.html">Home</a>
         <a href="blog.html">Blog</a>
         <a href="resources.html">Resources</a>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
     </nav>
     <div class="main-content">
         <h1>Latest Stories</h1>
