--- a/post.html
+++ b/post.html
@@ -83,7 +83,7 @@
         <a href="index.html">Home</a>
         <a href="blog.html">Blog</a>
         <a href="resources.html">Resources</a>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
     </nav>
 
     <div class="container">
