--- a/resources.html
+++ b/resources.html
@@ -37,7 +37,7 @@
         <a href="index.html">Home</a>
         <a href="blog.html">Blog</a>
         <a href="resources.html">Resources</a>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
     </nav>
     <div class="header">
         <h1>Resources</h1>
