--- a/resources.html
+++ b/resources.html
@@ -5,25 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Resources - Design with Kirsten</title>
     <style>
-        * { box-sizing: border-box; }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
         body { font-family: -apple-system, system-ui, sans-serif; background: #fafafa; margin: 0; padding-top: 100px; color: #333; min-height: 100vh; }
-        
         nav { position: fixed; top: 0; left: 0; width: 100%; height: 70px; background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); display: flex; align-items: center; justify-content: center; border-bottom: 1px solid #eee; z-index: 9999; }
-        nav a { margin: 0 18px; text-decoration: none; color: #666; font-weight: 600; font-size: 15px; transition: 0.2s; }
+        nav a { margin: 0 18px; text-decoration: none; color: #666; font-weight: 600; font-size: 15px; transition: 0.2s; letter-spacing: 0.5px; }
         nav a:hover { color: #007bff; }
-
         .header { text-align: center; padding: 20px 20px 40px; }
-        h1 { font-size: 2rem; margin-bottom: 10px; }
-
+        h1 { font-size: 2.2rem; margin-bottom: 10px; font-weight: 800; }
         .resources-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; max-width: 1100px; margin: 0 auto; padding: 0 25px 100px; }
-        
-        /* 資源卡片樣式 */
         .card { background: #fff; border: 1px solid #eee; border-radius: 20px; padding: 25px; text-decoration: none; color: inherit; transition: 0.3s; display: flex; flex-direction: column; box-shadow: 0 4px 12px rgba(0,0,0,0.03); }
         .card:hover { transform: translateY(-5px); border-color: #007bff; box-shadow: 0 12px 25px rgba(0,0,0,0.08); }
-        .card-tag { font-size: 0.7rem; font-weight: bold; color: #007bff; text-transform: uppercase; margin-bottom: 12px; letter-spacing: 0.5px; }
-        .card h3 { margin: 0 0 10px 0; font-size: 1.2rem; font-weight: 700; }
+        .card-tag { font-size: 0.7rem; font-weight: bold; color: #007bff; text-transform: uppercase; margin-bottom: 12px; }
+        .card h3 { margin: 0 0 10px 0; font-size: 1.25rem; font-weight: 700; }
         .card p { margin: 0; font-size: 0.9rem; color: #666; line-height: 1.6; }
-
         @media (max-width: 600px) {
             nav { height: 60px; }
             nav a { margin: 0 12px; font-size: 14px; }
@@ -33,16 +27,8 @@
     </style>
 </head>
 <body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="blog.html">Blog</a>
-        <a href="resources.html">Resources</a>
-        <a href="about.html">About</a>
-    </nav>
-    <div class="header">
-        <h1>Resources</h1>
-        <p style="color:#888">UXUI Design 工具與靈感來源</p>
-    </div>
+    <nav><a href="index.html">Home</a><a href="blog.html">Blog</a><a href="resources.html">Resources</a><a href="about.html">About</a></nav>
+    <div class="header"><h1>Resources</h1><p style="color:#888">UXUI Design 工具與靈感來源</p></div>
     <div class="resources-grid">
         <a href="https://www.figma.com" target="_blank" class="card"><span class="card-tag">Tool</span><h3>Figma</h3><p>業界領先的協作設計工具。</p></a>
         <a href="https://www.behance.net" target="_blank" class="card"><span class="card-tag">Inspiration</span><h3>Behance</h3><p>全球設計作品展示平台。</p></a>
