--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             text-align: center; padding: 120px 20px 80px;
         }
 
+        /* Profile Pic 與 Hover 效果 */
         .profile-container { margin-bottom: 25px; }
         .profile-img { 
             width: 120px; height: 120px; 
@@ -54,6 +55,15 @@
             border: 1px solid #f0f0f0;
             padding: 5px;
             background: #fff;
+            /* 動態過渡效果：設定時間為 0.4s，並使用平滑曲線 */
+            transition: transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1), box-shadow 0.4s ease;
+            cursor: pointer;
+        }
+        
+        /* 當滑鼠移入時放大 5% 並加強陰影 */
+        .profile-img:hover { 
+            transform: scale(1.05); 
+            box-shadow: 0 10px 25px rgba(0,0,0,0.05);
         }
 
         .hero h1 { 
